# foocatvc

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
foocatvc/: foocatvc.py
tests/: test_foocatvc.py
