[tool.poetry]
name = "foocatvc"
version = "0.1.0"
description = "\"Test package in class for python\""
authors = ["Vignesh Chandrasekaran"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
